# platform.core.appfw.ui-gadget-1

./: CMakeLists.txt  project.config  ui-gadget-1.manifest  ui-gadget-1.pc.in  ui-gadget-1.rule
client/: CMakeLists.txt  ug-client.c  ug-client.edc  ug-client.h
doc/: ui-gadget_doc.h
include/: SLP_UI_Gadget_PG.h  ug-dbg.h  ug-engine.h  ug-manager.h  ug-module.h  ug.h  ui-gadget-common.h  ui-gadget-efl.h  ui-gadget-engine.h  ui-gadget-module.h  ui-gadget.h
packaging/: ui-gadget-1.spec
src/: engine.c  manager.c  module.c  ug.c
ug-efl-engine/: CMakeLists.txt  ug-efl-engine.c  ug-efl-engine.h  ug_effect.edc
