SET(CLIENT ug-client)
SET(CLIENT_SRCS ug-client.c)
SET(CLIENT_VENDOR samsung)
SET(CLIENT_DIR /usr/bin)
SET(CLIENT_LOCALEDIR /usr/share/locale)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(CLIENT_PKGS REQUIRED
	capi-appfw-application
	appcore-efl
	appsvc
	bundle
	ecore-x
	edje
	dlog
	elementary
	evas
	x11
	vconf)

FOREACH(flag ${CLIENT_PKGS_CFLAGS})
	SET(CLIENT_CFLAGS "${CLIENT_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CLIENT_CFLAGS, "${CLIENT_CFLAGS} -DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
SET(CLIENT_CFLAGS, "${CLIENT_CFLAGS} -DVENDOR=\"${CLIENT_VENDOR}\"")
SET(CLIENT_CFLAGS, "${CLIENT_CFLAGS} -DAPP_NAME=\"${CLIENT}\"")
SET(CLIENT_CFLAGS, "${CLIENT_CFLAGS} -DAPP_DIR=\"${CLIENT_DIR}\"")
SET(CLIENT_CFLAGS, "${CLIENT_CFLAGS} -DAPP_LOCALEDIR=\"${CLIENT_LOCALEDIR}\"")

ADD_EXECUTABLE(${CLIENT} ${CLIENT_SRCS})
SET_TARGET_PROPERTIES(${CLIENT} PROPERTIES COMPILE_FLAGS "${CLIENT_CFLAGS}")
TARGET_LINK_LIBRARIES(${CLIENT} ${PROJECT_NAME} ${CLIENT_PKGS_LDFLAGS})

ADD_CUSTOM_TARGET(ug-client.edj
		COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/images
		${CMAKE_CURRENT_SOURCE_DIR}/ug-client.edc ${CMAKE_CURRENT_BINARY_DIR}/ug-client.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/ug-client.edc
)
ADD_DEPENDENCIES(${CLIENT} ug-client.edj)

INSTALL(TARGETS ${CLIENT} DESTINATION bin)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/ug-client.edj DESTINATION share/edje/ug-client)

